tests/ast_error_description/ast_error_description.exp
Error ----------------------------------------------------------------------------------------------- expression.js:15:1

Cannot cast `[].p` to empty because `unknown` [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:15:1
   15| (([] as empty) as T).p as empty;
       ^^^^^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: unknown};
                    ^^^^^^^ [1]
   expression.js:15:27
   15| (([] as empty) as T).p as empty;
                                 ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:15:3

Cannot cast array literal to empty because empty array literal [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:15:3
   15| (([] as empty) as T).p as empty;
         ^^ [1]

References:
   expression.js:15:9
   15| (([] as empty) as T).p as empty;
               ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:16:1

Cannot cast `[...].p` to empty because `unknown` [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:16:1
   16| (([1] as empty) as T).p as empty;
       ^^^^^^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: unknown};
                    ^^^^^^^ [1]
   expression.js:16:28
   16| (([1] as empty) as T).p as empty;
                                  ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:16:3

Cannot cast array literal to empty because array literal [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:16:3
   16| (([1] as empty) as T).p as empty;
         ^^^ [1]

References:
   expression.js:16:10
   16| (([1] as empty) as T).p as empty;
                ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:17:1

Cannot cast `[...].p` to empty because `unknown` [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:17:1
   17| (([1, 2, 3] as empty) as T).p as empty;
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: unknown};
                    ^^^^^^^ [1]
   expression.js:17:34
   17| (([1, 2, 3] as empty) as T).p as empty;
                                        ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:17:3

Cannot cast array literal to empty because array literal [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:17:3
   17| (([1, 2, 3] as empty) as T).p as empty;
         ^^^^^^^^^ [1]

References:
   expression.js:17:16
   17| (([1, 2, 3] as empty) as T).p as empty;
                      ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:18:1

Cannot cast `((...) => { ... }).p` to empty because `unknown` [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:18:1
   18| (((() => {}) as empty) as T).p as empty;
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: unknown};
                    ^^^^^^^ [1]
   expression.js:18:35
   18| (((() => {}) as empty) as T).p as empty;
                                         ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:18:4

Cannot cast function to empty because function [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:18:4
   18| (((() => {}) as empty) as T).p as empty;
          ^^^^^^^^ [1]

References:
   expression.js:18:17
   18| (((() => {}) as empty) as T).p as empty;
                       ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:19:1

Cannot cast `((...) => 42).p` to empty because `unknown` [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:19:1
   19| (((() => 42) as empty) as T).p as empty;
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: unknown};
                    ^^^^^^^ [1]
   expression.js:19:35
   19| (((() => 42) as empty) as T).p as empty;
                                         ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:19:4

Cannot cast function to empty because function [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:19:4
   19| (((() => 42) as empty) as T).p as empty;
          ^^^^^^^^ [1]

References:
   expression.js:19:17
   19| (((() => 42) as empty) as T).p as empty;
                       ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:20:1

Cannot cast `((...) => ({...})).p` to empty because `unknown` [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:20:1
   20| (((() => ({})) as empty) as T).p as empty;
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: unknown};
                    ^^^^^^^ [1]
   expression.js:20:37
   20| (((() => ({})) as empty) as T).p as empty;
                                           ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:20:4

Cannot cast function to empty because function [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:20:4
   20| (((() => ({})) as empty) as T).p as empty;
          ^^^^^^^^^^ [1]

References:
   expression.js:20:19
   20| (((() => ({})) as empty) as T).p as empty;
                         ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:21:1

Cannot cast `(a = 42).p` to empty because `unknown` [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:21:1
   21| (((a = 42) as empty) as T).p as empty;
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: unknown};
                    ^^^^^^^ [1]
   expression.js:21:33
   21| (((a = 42) as empty) as T).p as empty;
                                       ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:21:8

Cannot cast `a = 42` to empty because number [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:21:8
   21| (((a = 42) as empty) as T).p as empty;
              ^^ [1]

References:
   expression.js:21:15
   21| (((a = 42) as empty) as T).p as empty;
                     ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:22:1

Cannot cast `(a >>>= 42).p` to empty because `unknown` [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:22:1
   22| (((a >>>= 42) as empty) as T).p as empty;
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: unknown};
                    ^^^^^^^ [1]
   expression.js:22:36
   22| (((a >>>= 42) as empty) as T).p as empty;
                                          ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:22:4

Cannot cast `a >>>= 42` to empty because number [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:22:4
   22| (((a >>>= 42) as empty) as T).p as empty;
          ^

References:
   expression.js:21:8
   21| (((a = 42) as empty) as T).p as empty;
              ^^ [1]
   expression.js:22:18
   22| (((a >>>= 42) as empty) as T).p as empty;
                        ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:23:1

Cannot cast `({...} = {...}).p` to empty because `unknown` [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:23:1
   23| ((({a} = {a: 42}) as empty) as T).p as empty;
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: unknown};
                    ^^^^^^^ [1]
   expression.js:23:40
   23| ((({a} = {a: 42}) as empty) as T).p as empty;
                                              ^^^^^ [2]


Error ---------------------------------------------------------------------------------------------- expression.js:23:10

Cannot cast `{...} = {...}` to empty because object literal [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:23:10
   23| ((({a} = {a: 42}) as empty) as T).p as empty;
                ^^^^^^^ [1]

References:
   expression.js:23:22
   23| ((({a} = {a: 42}) as empty) as T).p as empty;
                            ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:24:1

Cannot cast `([...] = [...]).p` to empty because `unknown` [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:24:1
   24| ((([a] = [42]) as empty) as T).p as empty;
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: unknown};
                    ^^^^^^^ [1]
   expression.js:24:37
   24| ((([a] = [42]) as empty) as T).p as empty;
                                           ^^^^^ [2]


Error ---------------------------------------------------------------------------------------------- expression.js:24:10

Cannot cast `[...] = [...]` to empty because array literal [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:24:10
   24| ((([a] = [42]) as empty) as T).p as empty;
                ^^^^ [1]

References:
   expression.js:24:19
   24| ((([a] = [42]) as empty) as T).p as empty;
                         ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:25:1

Cannot cast `(a = a = 42).p` to empty because `unknown` [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:25:1
   25| (((a = a = 42) as empty) as T).p as empty;
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: unknown};
                    ^^^^^^^ [1]
   expression.js:25:37
   25| (((a = a = 42) as empty) as T).p as empty;
                                           ^^^^^ [2]


Error ---------------------------------------------------------------------------------------------- expression.js:25:12

Cannot cast `a = a = 42` to empty because number [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:25:12
   25| (((a = a = 42) as empty) as T).p as empty;
                  ^^ [1]

References:
   expression.js:25:19
   25| (((a = a = 42) as empty) as T).p as empty;
                         ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:26:1

Cannot cast `(1 + 2).p` to empty because `unknown` [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:26:1
   26| ((1 + 2 as empty) as T).p as empty;
       ^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: unknown};
                    ^^^^^^^ [1]
   expression.js:26:30
   26| ((1 + 2 as empty) as T).p as empty;
                                    ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:26:3

Cannot cast `1 + 2` to empty because number [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:26:3
   26| ((1 + 2 as empty) as T).p as empty;
         ^^^^^ [1]

References:
   expression.js:26:12
   26| ((1 + 2 as empty) as T).p as empty;
                  ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:27:1

Cannot cast `(1 + 2 + 3).p` to empty because `unknown` [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:27:1
   27| ((1 + 2 + 3 as empty) as T).p as empty;
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: unknown};
                    ^^^^^^^ [1]
   expression.js:27:34
   27| ((1 + 2 + 3 as empty) as T).p as empty;
                                        ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:27:3

Cannot cast `1 + 2 + 3` to empty because number [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:27:3
   27| ((1 + 2 + 3 as empty) as T).p as empty;
         ^^^^^^^^^ [1]

References:
   expression.js:27:16
   27| ((1 + 2 + 3 as empty) as T).p as empty;
                      ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:28:1

Cannot cast `(1 - (2 + 3)).p` to empty because `unknown` [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:28:1
   28| ((1 - (2 + 3) as empty) as T).p as empty;
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: unknown};
                    ^^^^^^^ [1]
   expression.js:28:36
   28| ((1 - (2 + 3) as empty) as T).p as empty;
                                          ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:28:3

Cannot cast `1 - (2 + 3)` to empty because number [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:28:3
   28| ((1 - (2 + 3) as empty) as T).p as empty;
         ^^^^^^^^^^^ [1]

References:
   expression.js:28:18
   28| ((1 - (2 + 3) as empty) as T).p as empty;
                        ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:29:1

Cannot cast `((1 + 2) * (3 + 4)).p` to empty because `unknown` [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:29:1
   29| (((1 + 2) * (3 + 4) as empty) as T).p as empty;
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: unknown};
                    ^^^^^^^ [1]
   expression.js:29:42
   29| (((1 + 2) * (3 + 4) as empty) as T).p as empty;
                                                ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:29:3

Cannot cast `(1 + 2) * (3 + 4)` to empty because number [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:29:3
   29| (((1 + 2) * (3 + 4) as empty) as T).p as empty;
         ^^^^^^^^^^^^^^^^^ [1]

References:
   expression.js:29:24
   29| (((1 + 2) * (3 + 4) as empty) as T).p as empty;
                              ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:30:1

Cannot cast `(1 + (2 * (3 + 4))).p` to empty because `unknown` [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:30:1
   30| (((1 + 2 * (3 + 4)) as empty) as T).p as empty;
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: unknown};
                    ^^^^^^^ [1]
   expression.js:30:42
   30| (((1 + 2 * (3 + 4)) as empty) as T).p as empty;
                                                ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:30:4

Cannot cast `1 + (2 * (3 + 4))` to empty because number [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:30:4
   30| (((1 + 2 * (3 + 4)) as empty) as T).p as empty;
          ^^^^^^^^^^^^^^^ [1]

References:
   expression.js:30:24
   30| (((1 + 2 * (3 + 4)) as empty) as T).p as empty;
                              ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:31:1

Cannot cast `f().p` to empty because `unknown` [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:31:1
   31| ((f() as empty) as T).p as empty;
       ^^^^^^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: unknown};
                    ^^^^^^^ [1]
   expression.js:31:28
   31| ((f() as empty) as T).p as empty;
                                  ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:31:3

Cannot cast `f()` to empty because `unknown` [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:31:3
   31| ((f() as empty) as T).p as empty;
         ^^^

References:
   expression.js:9:25
    9| const f = (x: unknown): unknown => x;
                               ^^^^^^^ [1]
   expression.js:31:10
   31| ((f() as empty) as T).p as empty;
                ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:32:1

Cannot cast `f(...).p` to empty because `unknown` [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:32:1
   32| ((f(42) as empty) as T).p as empty;
       ^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: unknown};
                    ^^^^^^^ [1]
   expression.js:32:30
   32| ((f(42) as empty) as T).p as empty;
                                    ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:32:3

Cannot cast `f(...)` to empty because `unknown` [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:32:3
   32| ((f(42) as empty) as T).p as empty;
         ^^^^^

References:
   expression.js:9:25
    9| const f = (x: unknown): unknown => x;
                               ^^^^^^^ [1]
   expression.js:32:12
   32| ((f(42) as empty) as T).p as empty;
                  ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:33:1

Cannot cast `class { ... }.p` to empty because `unknown` [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:33:1
   33| (((class {}) as empty) as T).p as empty;
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: unknown};
                    ^^^^^^^ [1]
   expression.js:33:35
   33| (((class {}) as empty) as T).p as empty;
                                         ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:33:4

Cannot cast `class { ... }` to empty because class `<<anonymous class>>` [1] is incompatible with empty [2].
[incompatible-type]

   expression.js:33:4
   33| (((class {}) as empty) as T).p as empty;
          ^^^^^^^^ [1]

References:
   expression.js:33:17
   33| (((class {}) as empty) as T).p as empty;
                       ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:34:1

Cannot cast `(1 ? 2 : 3).p` to empty because `unknown` [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:34:1
   34| (((1 ? 2 : 3) as empty) as T).p as empty;
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: unknown};
                    ^^^^^^^ [1]
   expression.js:34:36
   34| (((1 ? 2 : 3) as empty) as T).p as empty;
                                          ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:34:8

Cannot cast `1 ? 2 : 3` to empty because number [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:34:8
   34| (((1 ? 2 : 3) as empty) as T).p as empty;
              ^ [1]

References:
   expression.js:34:18
   34| (((1 ? 2 : 3) as empty) as T).p as empty;
                        ^^^^^ [2]


Error ---------------------------------------------------------------------------------------------- expression.js:34:12

Cannot cast `1 ? 2 : 3` to empty because number [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:34:12
   34| (((1 ? 2 : 3) as empty) as T).p as empty;
                  ^ [1]

References:
   expression.js:34:18
   34| (((1 ? 2 : 3) as empty) as T).p as empty;
                        ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:35:1

Cannot cast `((1 ? 2 : 3) ? 4 : 5).p` to empty because `unknown` [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:35:1
   35| ((((1 ? 2 : 3) ? 4 : 5) as empty) as T).p as empty;
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: unknown};
                    ^^^^^^^ [1]
   expression.js:35:46
   35| ((((1 ? 2 : 3) ? 4 : 5) as empty) as T).p as empty;
                                                    ^^^^^ [2]


Error ---------------------------------------------------------------------------------------------- expression.js:35:18

Cannot cast `(1 ? 2 : 3) ? 4 : 5` to empty because number [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:35:18
   35| ((((1 ? 2 : 3) ? 4 : 5) as empty) as T).p as empty;
                        ^ [1]

References:
   expression.js:35:28
   35| ((((1 ? 2 : 3) ? 4 : 5) as empty) as T).p as empty;
                                  ^^^^^ [2]


Error ---------------------------------------------------------------------------------------------- expression.js:35:22

Cannot cast `(1 ? 2 : 3) ? 4 : 5` to empty because number [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:35:22
   35| ((((1 ? 2 : 3) ? 4 : 5) as empty) as T).p as empty;
                            ^ [1]

References:
   expression.js:35:28
   35| ((((1 ? 2 : 3) ? 4 : 5) as empty) as T).p as empty;
                                  ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:35:5

This condition is truthy. [constant-condition]

   35| ((((1 ? 2 : 3) ? 4 : 5) as empty) as T).p as empty;
           ^^^^^^^^^


Error ----------------------------------------------------------------------------------------------- expression.js:36:1

Cannot cast `function () { ... }.p` to empty because `unknown` [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:36:1
   36| (((function () {}) as empty) as T).p as empty;
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: unknown};
                    ^^^^^^^ [1]
   expression.js:36:41
   36| (((function () {}) as empty) as T).p as empty;
                                               ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:36:4

Cannot cast function to empty because function [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:36:4
   36| (((function () {}) as empty) as T).p as empty;
          ^^^^^^^^^^^ [1]

References:
   expression.js:36:23
   36| (((function () {}) as empty) as T).p as empty;
                             ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:37:1

Cannot cast `a.p` to empty because `unknown` [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:37:1
   37| ((a as empty) as T).p as empty;
       ^^^^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: unknown};
                    ^^^^^^^ [1]
   expression.js:37:26
   37| ((a as empty) as T).p as empty;
                                ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:37:3

Cannot cast `a` to empty because number [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:37:3
   37| ((a as empty) as T).p as empty;
         ^

References:
   expression.js:25:12
   25| (((a = a = 42) as empty) as T).p as empty;
                  ^^ [1]
   expression.js:37:8
   37| ((a as empty) as T).p as empty;
              ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:38:1

Cannot cast `import('./expression').p` to empty because `unknown` [1] is incompatible with empty [2].
[incompatible-type]

   expression.js:38:1
   38| ((import('./expression') as empty) as T).p as empty;
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: unknown};
                    ^^^^^^^ [1]
   expression.js:38:47
   38| ((import('./expression') as empty) as T).p as empty;
                                                     ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:38:3

Cannot cast `import('./expression')` to empty because `Promise` [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:38:3
   38| ((import('./expression') as empty) as T).p as empty;
         ^^^^^^^^^^^^^^^^^^^^^^ [1]

References:
   expression.js:38:29
   38| ((import('./expression') as empty) as T).p as empty;
                                   ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:39:1

Cannot cast `<MyComponent />.p` to empty because `unknown` [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:39:1
   39| ((<MyComponent /> as empty) as T).p as empty;
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: unknown};
                    ^^^^^^^ [1]
   expression.js:39:40
   39| ((<MyComponent /> as empty) as T).p as empty;
                                              ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:39:3

Cannot cast `<MyComponent />` to empty because React element [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:39:3
   39| ((<MyComponent /> as empty) as T).p as empty;
         ^^^^^^^^^^^^^^^ [1]

References:
   expression.js:39:22
   39| ((<MyComponent /> as empty) as T).p as empty;
                            ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:40:1

Cannot cast `<>...</>.p` to empty because `unknown` [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:40:1
   40| ((<>foo</> as empty) as T).p as empty;
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: unknown};
                    ^^^^^^^ [1]
   expression.js:40:33
   40| ((<>foo</> as empty) as T).p as empty;
                                       ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:40:3

Cannot cast `<>...</>` to empty because React element [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:40:3
   40| ((<>foo</> as empty) as T).p as empty;
         ^^^^^^^^ [1]

References:
   expression.js:40:15
   40| ((<>foo</> as empty) as T).p as empty;
                     ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:40:3

Cannot get `React.Fragment` because property `Fragment` is missing in object type [1]. [prop-missing]

   expression.js:40:3
   40| ((<>foo</> as empty) as T).p as empty;
         ^^^^^^^^

References:
   expression.js:12:20
   12| declare var React: {createElement: React$CreateElement};
                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]


Error ----------------------------------------------------------------------------------------------- expression.js:41:1

Cannot cast `'foo'.p` to empty because `unknown` [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:41:1
   41| (('foo' as empty) as T).p as empty;
       ^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: unknown};
                    ^^^^^^^ [1]
   expression.js:41:30
   41| (('foo' as empty) as T).p as empty;
                                    ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:41:3

Cannot cast `'foo'` to empty because string [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:41:3
   41| (('foo' as empty) as T).p as empty;
         ^^^^^ [1]

References:
   expression.js:41:12
   41| (('foo' as empty) as T).p as empty;
                  ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:42:1

Cannot cast `'abcdefghij...'.p` to empty because `unknown` [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:42:1
   42| (('abcdefghijklmnopqrstuvwxyz' as empty) as T).p as empty;
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: unknown};
                    ^^^^^^^ [1]
   expression.js:42:53
   42| (('abcdefghijklmnopqrstuvwxyz' as empty) as T).p as empty;
                                                           ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:42:3

Cannot cast `'abcdefghij...'` to empty because string [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:42:3
   42| (('abcdefghijklmnopqrstuvwxyz' as empty) as T).p as empty;
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]

References:
   expression.js:42:35
   42| (('abcdefghijklmnopqrstuvwxyz' as empty) as T).p as empty;
                                         ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:43:1

Cannot cast `42.p` to empty because `unknown` [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:43:1
   43| ((42 as empty) as T).p as empty;
       ^^^^^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: unknown};
                    ^^^^^^^ [1]
   expression.js:43:27
   43| ((42 as empty) as T).p as empty;
                                 ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:43:3

Cannot cast `42` to empty because number [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:43:3
   43| ((42 as empty) as T).p as empty;
         ^^ [1]

References:
   expression.js:43:9
   43| ((42 as empty) as T).p as empty;
               ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:44:1

Cannot cast `true.p` to empty because `unknown` [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:44:1
   44| ((true as empty) as T).p as empty;
       ^^^^^^^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: unknown};
                    ^^^^^^^ [1]
   expression.js:44:29
   44| ((true as empty) as T).p as empty;
                                   ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:44:3

Cannot cast `true` to empty because boolean [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:44:3
   44| ((true as empty) as T).p as empty;
         ^^^^ [1]

References:
   expression.js:44:11
   44| ((true as empty) as T).p as empty;
                 ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:45:1

Cannot cast `false.p` to empty because `unknown` [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:45:1
   45| ((false as empty) as T).p as empty;
       ^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: unknown};
                    ^^^^^^^ [1]
   expression.js:45:30
   45| ((false as empty) as T).p as empty;
                                    ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:45:3

Cannot cast `false` to empty because boolean [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:45:3
   45| ((false as empty) as T).p as empty;
         ^^^^^ [1]

References:
   expression.js:45:12
   45| ((false as empty) as T).p as empty;
                  ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:46:1

Cannot cast `null.p` to empty because `unknown` [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:46:1
   46| ((null as empty) as T).p as empty;
       ^^^^^^^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: unknown};
                    ^^^^^^^ [1]
   expression.js:46:29
   46| ((null as empty) as T).p as empty;
                                   ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:46:3

Cannot cast `null` to empty because null [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:46:3
   46| ((null as empty) as T).p as empty;
         ^^^^ [1]

References:
   expression.js:46:11
   46| ((null as empty) as T).p as empty;
                 ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:47:1

Cannot cast `o.p.p` to empty because `unknown` [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:47:1
   47| ((o.p as empty) as T).p as empty;
       ^^^^^^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: unknown};
                    ^^^^^^^ [1]
   expression.js:47:28
   47| ((o.p as empty) as T).p as empty;
                                  ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:47:3

Cannot cast `o.p` to empty because number [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:47:3
   47| ((o.p as empty) as T).p as empty;
         ^^^

References:
   expression.js:10:15
   10| const o = {p: 42};
                     ^^ [1]
   expression.js:47:10
   47| ((o.p as empty) as T).p as empty;
                ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:48:1

Cannot cast `(new f()).p` to empty because `unknown` [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:48:1
   48| ((new f() as empty) as T).p as empty;
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: unknown};
                    ^^^^^^^ [1]
   expression.js:48:32
   48| ((new f() as empty) as T).p as empty;
                                      ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:48:7

Cannot use `new` on function [1]. Only classes and interfaces with a construct signature can be constructed.
[invalid-constructor]

   expression.js:48:7
   48| ((new f() as empty) as T).p as empty;
             ^

References:
   expression.js:9:11
    9| const f = (x: unknown): unknown => x;
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]


Error ----------------------------------------------------------------------------------------------- expression.js:49:1

Cannot cast `(new f(...)).p` to empty because `unknown` [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:49:1
   49| ((new f(42) as empty) as T).p as empty;
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: unknown};
                    ^^^^^^^ [1]
   expression.js:49:34
   49| ((new f(42) as empty) as T).p as empty;
                                        ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:49:7

Cannot use `new` on function [1]. Only classes and interfaces with a construct signature can be constructed.
[invalid-constructor]

   expression.js:49:7
   49| ((new f(42) as empty) as T).p as empty;
             ^

References:
   expression.js:9:11
    9| const f = (x: unknown): unknown => x;
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]


Error ----------------------------------------------------------------------------------------------- expression.js:50:1

Cannot cast `{...}.p` to empty because `unknown` [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:50:1
   50| ((({}) as empty) as T).p as empty;
       ^^^^^^^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: unknown};
                    ^^^^^^^ [1]
   expression.js:50:29
   50| ((({}) as empty) as T).p as empty;
                                   ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:50:4

Cannot cast object literal to empty because object literal [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:50:4
   50| ((({}) as empty) as T).p as empty;
          ^^ [1]

References:
   expression.js:50:11
   50| ((({}) as empty) as T).p as empty;
                 ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:51:1

Cannot cast `3.p` to empty because `unknown` [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:51:1
   51| (((1, 2, 3) as empty) as T).p as empty;
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: unknown};
                    ^^^^^^^ [1]
   expression.js:51:34
   51| (((1, 2, 3) as empty) as T).p as empty;
                                        ^^^^^ [2]


Error ---------------------------------------------------------------------------------------------- expression.js:51:10

Cannot cast `3` to empty because number [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:51:10
   51| (((1, 2, 3) as empty) as T).p as empty;
                ^ [1]

References:
   expression.js:51:16
   51| (((1, 2, 3) as empty) as T).p as empty;
                      ^^^^^ [2]


Error ---------------------------------------------------------------------------------------------- expression.js:52:17

Cannot use `class { ... }` [1] as a superclass. Only variables and member expressions may be extended [invalid-extends]

                       v------
   52| class X extends class {
   53|   m() {}
   54| } {
       ^ [1]


Error ----------------------------------------------------------------------------------------------- expression.js:56:5

Cannot cast `super.m.p` to empty because `unknown` [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:56:5
   56|     ((super.m as empty) as T).p as empty;
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: unknown};
                    ^^^^^^^ [1]
   expression.js:56:36
   56|     ((super.m as empty) as T).p as empty;
                                          ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:59:1

Cannot cast `f`...`.p` to empty because `unknown` [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:59:1
   59| ((f`foobar` as empty) as T).p as empty;
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: unknown};
                    ^^^^^^^ [1]
   expression.js:59:34
   59| ((f`foobar` as empty) as T).p as empty;
                                        ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:59:3

Cannot cast template string to empty because `unknown` [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:59:3
   59| ((f`foobar` as empty) as T).p as empty;
         ^^^^^^^^^

References:
   expression.js:9:25
    9| const f = (x: unknown): unknown => x;
                               ^^^^^^^ [1]
   expression.js:59:16
   59| ((f`foobar` as empty) as T).p as empty;
                      ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:60:1

Cannot cast ``...`.p` to empty because `unknown` [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:60:1
   60| ((`foobar` as empty) as T).p as empty;
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: unknown};
                    ^^^^^^^ [1]
   expression.js:60:33
   60| ((`foobar` as empty) as T).p as empty;
                                       ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:60:3

Cannot cast template string to empty because string [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:60:3
   60| ((`foobar` as empty) as T).p as empty;
         ^^^^^^^^ [1]

References:
   expression.js:60:15
   60| ((`foobar` as empty) as T).p as empty;
                     ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:62:3

Cannot cast `this.p` to empty because `unknown` [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:62:3
   62|   ((this as empty) as T).p as empty;
         ^^^^^^^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: unknown};
                    ^^^^^^^ [1]
   expression.js:62:31
   62|   ((this as empty) as T).p as empty;
                                     ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:62:5

Cannot cast `this` to empty because number [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:62:5
   62|   ((this as empty) as T).p as empty;
           ^^^^

References:
   expression.js:61:18
   61| (function (this: number) {
                        ^^^^^^ [1]
   expression.js:62:13
   62|   ((this as empty) as T).p as empty;
                   ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:64:1

Cannot cast `42.p` to empty because `unknown` [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:64:1
   64| (((42 as string) as empty) as T).p as empty;
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: unknown};
                    ^^^^^^^ [1]
   expression.js:64:39
   64| (((42 as string) as empty) as T).p as empty;
                                             ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:64:4

Cannot cast `42` to string because number [1] is incompatible with string [2]. [incompatible-type]

   expression.js:64:4
   64| (((42 as string) as empty) as T).p as empty;
          ^^ [1]

References:
   expression.js:64:10
   64| (((42 as string) as empty) as T).p as empty;
                ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------- expression.js:64:10

Cannot cast `42` to empty because string [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:64:10
   64| (((42 as string) as empty) as T).p as empty;
                ^^^^^^ [1]

References:
   expression.js:64:21
   64| (((42 as string) as empty) as T).p as empty;
                           ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:65:1

Cannot cast `(-42).p` to empty because `unknown` [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:65:1
   65| ((-42 as empty) as T).p as empty;
       ^^^^^^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: unknown};
                    ^^^^^^^ [1]
   expression.js:65:28
   65| ((-42 as empty) as T).p as empty;
                                  ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:65:3

Cannot cast `-42` to empty because number [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:65:3
   65| ((-42 as empty) as T).p as empty;
         ^^^ [1]

References:
   expression.js:65:10
   65| ((-42 as empty) as T).p as empty;
                ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:66:1

Cannot cast `(!42).p` to empty because `unknown` [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:66:1
   66| ((!42 as empty) as T).p as empty;
       ^^^^^^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: unknown};
                    ^^^^^^^ [1]
   expression.js:66:28
   66| ((!42 as empty) as T).p as empty;
                                  ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:66:3

Cannot cast `!42` to empty because boolean [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:66:3
   66| ((!42 as empty) as T).p as empty;
         ^^^ [1]

References:
   expression.js:66:10
   66| ((!42 as empty) as T).p as empty;
                ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:67:1

Cannot cast `(++a).p` to empty because `unknown` [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:67:1
   67| ((++a as empty) as T).p as empty;
       ^^^^^^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: unknown};
                    ^^^^^^^ [1]
   expression.js:67:28
   67| ((++a as empty) as T).p as empty;
                                  ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:67:3

Cannot cast `++a` to empty because number [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:67:3
   67| ((++a as empty) as T).p as empty;
         ^^^ [1]

References:
   expression.js:67:10
   67| ((++a as empty) as T).p as empty;
                ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:68:1

Cannot cast `(a++).p` to empty because `unknown` [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:68:1
   68| ((a++ as empty) as T).p as empty;
       ^^^^^^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: unknown};
                    ^^^^^^^ [1]
   expression.js:68:28
   68| ((a++ as empty) as T).p as empty;
                                  ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:68:3

Cannot cast `a++` to empty because number [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:68:3
   68| ((a++ as empty) as T).p as empty;
         ^^^ [1]

References:
   expression.js:68:10
   68| ((a++ as empty) as T).p as empty;
                ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:70:3

Cannot cast `yield.p` to empty because `unknown` [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:70:3
   70|   (((yield) as empty) as T).p as empty;
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: unknown};
                    ^^^^^^^ [1]
   expression.js:70:34
   70|   (((yield) as empty) as T).p as empty;
                                        ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:70:6

Cannot cast `yield` to empty because number [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:70:6
   70|   (((yield) as empty) as T).p as empty;
            ^^^^^

References:
   expression.js:69:48
   69| function* g1(): Generator<number | void, void, number> {
                                                      ^^^^^^ [1]
   expression.js:70:16
   70|   (((yield) as empty) as T).p as empty;
                      ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:71:3

Cannot cast `(yield 42).p` to empty because `unknown` [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:71:3
   71|   (((yield 42) as empty) as T).p as empty;
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: unknown};
                    ^^^^^^^ [1]
   expression.js:71:37
   71|   (((yield 42) as empty) as T).p as empty;
                                           ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:71:6

Cannot cast `yield 42` to empty because number [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:71:6
   71|   (((yield 42) as empty) as T).p as empty;
            ^^^^^^^^

References:
   expression.js:69:48
   69| function* g1(): Generator<number | void, void, number> {
                                                      ^^^^^^ [1]
   expression.js:71:19
   71|   (((yield 42) as empty) as T).p as empty;
                         ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:74:3

Cannot cast `(yield* g1()).p` to empty because `unknown` [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:74:3
   74|   (((yield* g1()) as empty) as T).p as empty;
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   expression.js:6:14
    6| type T = {p: unknown};
                    ^^^^^^^ [1]
   expression.js:74:40
   74|   (((yield* g1()) as empty) as T).p as empty;
                                              ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:74:6

Cannot cast `yield* g1()` to empty because undefined [1] is incompatible with empty [2]. [incompatible-type]

   expression.js:74:6
   74|   (((yield* g1()) as empty) as T).p as empty;
            ^^^^^^^^^^^

References:
   expression.js:69:42
   69| function* g1(): Generator<number | void, void, number> {
                                                ^^^^ [1]
   expression.js:74:22
   74|   (((yield* g1()) as empty) as T).p as empty;
                            ^^^^^ [2]



Found 103 errors
